<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	android:weightSum="1">
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/selectedImageTitle"
		android:text="@string/pickPicture"
		android:gravity="center_horizontal"
		android:layout_marginTop="5dp"	
		android:layout_marginBottom="5dp"		
		>		
	</TextView>
	<ListView
		android:choiceMode="singleChoice"
		android:drawSelectorOnTop="false"
		android:id="@+id/filesListView"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"		
		android:layout_weight="1"
		></ListView>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<Button
			android:freezesText="false"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:width="100dip"
			android:hapticFeedbackEnabled="false"
			android:id="@+id/okButton"
			android:text="@string/ok"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="20dp"></Button>
		<Button
			android:layout_height="wrap_content"
			android:id="@+id/cancelButton"
			android:width="100dip"
			android:layout_width="wrap_content"
			android:text="@string/cancel"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="20dp"></Button>
	</RelativeLayout>



</LinearLayout>